# amygda

./: .gitignore  LICENCE.md  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yaml  tests.yaml
amygda/: __init__.py  cli.py  core.py  statefiles.py
amygda/config/: CHNMCMM2-conc-matrix.txt  CHNMCMM2-dilution-matrix.txt  CHNMCMM2-drug-matrix.txt  EUST2-conc-matrix.txt  EUST2-dilution-matrix.txt  EUST2-drug-matrix.txt  EUSTAPF-conc-matrix.txt  EUSTAPF-dilution-matrix.txt  EUSTAPF-drug-matrix.txt  GB1ECSDP-dilution-matrix.txt  GPALL1F-drug-matrix.txt
config/: GB1ECSDP-conc-matrix.txt  GB1ECSDP-drug-matrix.txt  GPALL1F-conc-matrix.txt  GPALL1F-dilution-matrix.txt  GPALL1F-drug-matrix.txt  UKMYC5-drug-orientation.txt
examples/: analyse-plate-with-amygda.py
examples/sample-images/: remove-output-images.sh
tests/: test_core.py
