[metadata]
name = amygda
version = attr: amygda.__version__
description = Measure the mycobacterial growth in a 96-well plate, thereby determining the MICs
long_description = file: README.md
author= Philip W Fowler
long_description_content_type = text/markdown
url = https://github.com/fowlerlab/amygda
keywords = AMR, TB, clinical microbiology, minimum inhibitory concentration, image processing
license = University of Oxford License, see LICENSE
classifiers = Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    numpy >= 1.13
    datreant >= 1.0.2
    opencv-python >= 3.4
    scipy >= 1.1.0
    matplotlib >= 2.2.2
    pytest >= 7.1
    pytest-cov
scripts = bin/analyse-plate-with-amygda.py

[options.package_data]
* =  ../config/*.txt
    
